--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
 
 
+
     <dependencies>
 
         <dependency>
@@ -19,6 +20,16 @@
             <version>4.0.0-alpha-3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.noveria.assertion</groupId>
+            <artifactId>wait-until-asserter</artifactId>
+            <version>1.0.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.testng</groupId>
